--- a/index.html
+++ b/index.html
@@ -9,13 +9,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet"
     />
-
+    <!-- CSS-->
+    <link rel="stylesheet" href="./src/styles/reset.css">
+    <link rel="stylesheet" href="./src/styles/globalStyles.css">
+    <link rel="stylesheet" href="./src/styles/index.css">
     <title>Git Search</title>
   </head>
   <body>
+    <main class="main__container">
+      <section class="section__container section__container--text">
+        <h1 class="title__text title__text--h1">Git Search</h1>
+        <p class="title__text title__text--p">Encontre e se conecte com profissionais de forma rápida e fácil</p>
+      </section>
+      <section class="section__container section__container--user">
+        <h1 class="title__user--h1">Procurar por Usuário</h1>
+        <div class="section__search">
+          <h2 class="title__user--h4">Usuário Github</h2>
+          <input class="input__user" type="text" placeholder="Digite um usuário do github aqui...">
+          <button class="button__user">Ver perfil do Github</button>
+        </div>
+      </section>
+    </main>
 
     <script type="module" src="./src/scripts/index.js"></script>
   </body>
