--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -13,10 +13,25 @@
       rel="stylesheet"
     />
 
+    <!-- CSS -->
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="../styles/globalStyles.css" />
+    <link rel="stylesheet" href="../styles/profile.css" />
+
     <title>Git Search - User Profile</title>
   </head>
   <body>
+    <header class="header__container">
+      <div class="header__user"></div>
 
+      <nav class="nav__container">
+        <button class="nav__a">Trocar de Usuário</button>
+      </nav>
+    </header>
+
+    <main class="main__container">
+      <ul class="main__list"></ul>
+    </main>
     <script type="module" src="../scripts/profile.js"></script>
   </body>
 </html>
